# vercye_ops

./: .dockerignore  .env_example  .gitignore  .pre-commit-config.yaml  404.html  CITATION.md  MANIFEST.in  README.md  citation.cff  index.html  merged_geometry.geojson  optuna.journal  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  other.yml
.github/workflows/: deploy-mkdocs.yml  lint.yaml  test.yaml
LAI/gee_architecture/: index.html
LAI/intro/: index.html
LAI/running/: index.html
LAI/stac_architecture/: index.html
Vercye/apsim/: index.html
Vercye/architecture/: index.html
Vercye/cli/: index.html
Vercye/devtipps/: index.html
Vercye/inputs/: index.html
Vercye/intro/: index.html
Vercye/metdata/: index.html
Vercye/outputs/: index.html
Vercye/quickstart/: index.html
Vercye/results_upload/: index.html
Vercye/running/: index.html
Vercye/troubleshooting/: index.html
Vercye/webapp/: index.html
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/LAI/: gee_architecture.md  intro.md  running.md  stac_architecture.md
docs/docs/Vercye/: apsim.md  architecture.md  cli.md  devtipps.md  inputs.md  metdata.md  outputs.md  results_upload.md  running.md  troubleshooting.md  webapp.md
environment/: environment.dev.yaml  environment.yaml
search/: search_index.json
tests/apsim/: test_convert_shapefile_to_geojson.py
tests/eval/: test_aggregate_yield_per_level.py  test_eval_metrics.py
tests/lai/: test_lai_analysis.py  test_lai_generation_integration.py
tests/matching/: test_estimate_total_yield.py  test_generate_converted_lai_map.py  test_utils.py
tests/reporting/: test_aggregate_meteorological_stats.py  test_aggregate_multiyear_predictions.py  test_aggregate_yield_estimates.py  test_mosaic_and_reproject.py  test_zonal_aggregation.py
tests/utils/: test_file_sync.py
vercye_ops/: __init__.py  cli.py  main.py  prepare_yieldstudy.py  vercye_analysis_helper.ipynb  vercye_setup_helper.ipynb  version.py
vercye_ops/analysis_scripts/: eval_from_shp.py
vercye_ops/apsim/: README.md  construct_chirps_precipitation_files.py  construct_met_files.py  convert_shapefile_to_geojson.py  download_chirps_data.py  estimate_cultivars_from_rsdata.py  fetch_era5.py  fetch_met_data.py  fetch_nasapower.py  generate_weather_report.py  mean_rs_lai.csv  prepare_shapefile.py  update_apsimx_template.py
vercye_ops/evaluation/: evaluate_yield_estimates.py
vercye_ops/examples/: config_template.yaml  run_config_example.yaml  run_config_template.yaml  setup_config_template.yaml
vercye_ops/lai/: 0_build_library.py  0_csv_to_pytorch.py  0_mask_cropmask.py  0_reproj_mask.py  0_validate_constrained_cropmask.py  1_1_download_S2.py  1_1_gee_export_S2.py  1_2_gdrive_dl_S2.py  1_3_standardize_S2.py  2_primary_LAI.py  2_primary_LAI_new.py  3_analysis_LAI.py  4_quicklook.py  README.md  Snakefile_step2  batch_LAI.py  exp.py  lai_analysis.py  lai_analysis_old.py
vercye_ops/lai/GEE_pipeline/: 1_1_gee_export_S2.py  1_2_gdrive_dl_S2.py  1_3_standardize_S2.py  2_primary_LAI_GEE.py  3_build_daily_vrts.py  Readme.md  Snakefile  Snakefile_step1  Snakefile_step2  config.yaml  gdrive_download_helpers.py
vercye_ops/lai/lai_creation_GEE/: 1_1_gee_export_S2.py  1_2_gdrive_dl_S2.py  1_3_standardize_S2.py  2_1_primary_LAI_GEE.py  2_2_build_daily_vrts.py  2_build_daily_vrts.py  2_primary_LAI_GEE.py  Readme.md  Snakefile  config.yaml  (+2 more)
vercye_ops/matching_sim_real/: aggregate_maps.py  aggregate_meteorological_stats.py  aggregate_multiyear_predictions.py  aggregate_primary_yield_stats.py  aggregate_yield_estimates.py  aggregate_yield_estimates_per_eval_lvl.py  estimate_total_yield.py  evaluate.py  evaluate_yield_estimates.py  generate_aggregated_final_report.py  generate_converted_lai_map.py  generate_lai_plot.py  generate_matching_report.py  generate_multiyear_comparison.py  match_sim_rs_lai.py  match_sim_rs_lai_dummy.py  utils.py
vercye_ops/met_data/: construct_chirps_precipitation_files.py  download_chirps_data.py  fetch_ecmwf_nrt_forecast.py  fetch_era5.py  fetch_nasapower.py
vercye_ops/reporting/: aggregate_maps.py  aggregate_meteorological_stats.py  aggregate_multiyear_predictions.py  aggregate_supplementary_maps.py  aggregate_yield_estimates_per_eval_lvl.py  aggregate_yield_stats_per_level.py  generate_aggregated_final_report.py  generate_interactive_visualization.py  generate_lai_plot.py  generate_lai_report.py  generate_matching_report.py  generate_multiyear_comparison.py  generate_weather_report.py  mosaic_and_reproject.py  output_data_patterns.txt  package_and_upload.py  save_simulations.py  zonal_aggregation.py
vercye_ops/snakemake/: Snakefile  Snakefile.azure  Snakefile_noTempMet  config.yaml  config_local.yaml  config_umd.yaml  config_validation.py  generate_aggregated_final_report.py  generate_interative_viz.py  snakefile_helpers.py
vercye_ops/utils/: binarize_cropmask.py  convert_shapefile_to_geojson.py  env_utils.py  file_sync.py  init_logger.py  rasterize_shapefile.py  remove_mixed_admin_levels.py
vercye_webapp/: .env_example  .gitignore  Readme.md  lai_dashboard.html  main.py  models.py  requirements.txt  run.sh  study_dashboard.html  utils.py  worker.py
vercye_webapp/frontend/: README.md  index.html  install.sh  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
vercye_webapp/routers/: analysis.py  cropmasks.py  frontend.py  lai.py  studies.py
(+67 files in other folders)
