[build-system]
requires = [
    "importlib-metadata>=3.6;python_version<='3.10'",
    "setuptools>=62.6",
    "setuptools_scm[toml]>=6.4.2",
    "wheel>=0.37.1",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "vercye_ops/version.py"
write_to_template = "__version__ = '{version}'\n"
