[build-system]
requires = [
    "importlib-metadata>=3.6;python_version<='3.10'",
    "setuptools>=62.6",
    "setuptools_scm[toml]>=6.4.2",
    "wheel>=0.37.1",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "vercye_ops/version.py"
write_to_template = "__version__ = '{version}'\n"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that load heavy resources like PyTorch models (deselect with '-m \"not slow\"')",
]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]
