[options]
zip_safe = False
python_requires = >=3.10, <3.11
include_package_data = True
packages = find:
install_requires = file: requirements.txt

[options.packages.find]
exclude = 
	tests
	*.tests
	*.tests.*
	tests.*

[options.extras_require]
dev = 
	pytest

[options.entry_points]

[metadata]
name = vercye_ops
url = https://github.jpl.nasa.gov/ukraine-ag/vercye_ops
download_url = https://github.jpl.nasa.gov/ukraine-ag/vercye_ops/releases/latest
project_urls = 
	Documentation = https://github.jpl.nasa.gov/ukraine-ag/vercye_ops/README.md
	Site = https://github.jpl.nasa.gov/ukraine-ag/vercye_ops
	Source = https://github.jpl.nasa.gov/ukraine-ag/vercye_ops
	Tracker = https://github.jpl.nasa.gov/ukraine-ag/vercye_ops/issues
	Download = https://github.jpl.nasa.gov/ukraine-ag/vercye_ops/releases/latest
author = MLIA Group at JPL
author_email = wronk@jpl.nasa.gov
description = Operational version of the VERCYE crop estimation library built in partnership with NASA Harvest
keywords = nasa, jpl, NASA Harvest, apsim, remote sensing, crops, Ukraine
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: Implementation :: PyPy
	Topic :: Scientific/Engineering
	Topic :: Software Development :: Build Tools
	Topic :: Software Development :: Libraries :: Application Frameworks
	Topic :: System :: Installation/Setup
license = Apache-2.0
license_files = 
	LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[egg_info]
tag_build = 
tag_date = 0

